# osgrep

./: .env.example  .gitignore  README.md  bun.lockb  package.json  plan.md  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
osgrep-core/: .gitignore  Cargo.toml  bun.lockb  index.d.ts  index.js  package.json  test.mjs
osgrep-core/bench/: PARITY.md  _util.ts  codeatlas-system.ts  colbert-parity-rust.ts  colbert-parity.ts  dense-ort.ts  dense.ts  rerank-ort.ts  rerank-preindexed.ts  rerank.ts
osgrep-core/src/: colbert_ort.rs  dense_ort.rs  lib.rs
plugins/osgrep/hooks/: start.js
plugins/osgrep/skills/osgrep/: SKILL.md
src/: config.ts  index.ts  utils.ts
src/commands/: claude-code.ts  doctor.ts  search.ts  serve.ts  setup.ts  trace.ts
src/commands/agent/: mcp.ts  opencode.ts
src/commands/utility/: doctor.ts
src/lib/graph/: graph-builder.ts
src/lib/index/: chunker.ts  grammar-loader.ts  ignore-patterns.ts  syncer.ts
src/lib/native/: index.ts
src/lib/output/: formatter.ts  json-formatter.ts
src/lib/search/: expander.ts  expansion-types.ts  searcher.ts
src/lib/setup/: setup-helpers.ts
src/lib/utils/: ansi.ts  exit.ts  formatter.ts
src/lib/workers/: orchestrator.ts  pool.ts  process-child.ts  worker.ts
src/lib/workers/embeddings/: qwen.ts
src/lib/workers/rerankers/: zerank.ts
tests/: cloud-providers.test.ts  expander.test.ts  setup.ts
