[package]
name = "osgrep-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS bindings
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"

# Utilities
once_cell = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HuggingFace tokenizers + model hub
tokenizers = "0.21"
hf-hub = "0.4"

# ONNX Runtime (the only ML backend we need)
ort = { version = "2.0.0-rc.10", default-features = true, features = ["download-binaries"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
